force-app/main/default/objects/Criteria_Assignment__c/Criteria_Assignment__c.object-meta.xml
<CustomObject>
    <description>This object stores the filter criteria that are required to create patient groups.</description>
    <label>Criteria Assignment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Criteria Assignment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>