force-app/main/default/objects/Criteria_Assignment__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <description>Identifies the account group linked to the criteria assignment.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>Account_Group__c</referenceTo>
    <relationshipLabel>Criteria Assignments</relationshipLabel>
    <relationshipName>Criteria_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>