force-app/main/default/objects/Criteria_Assignment__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <description>Specifies the type of criteria for the assignment.</description>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOC</fullName>
            </value>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Care Team Member</fullName>
            </value>
            <value>
                <fullName>Current Patient Name</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Admit Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>