force-app/main/default/objects/Criteria_Assignment__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Represents the API name of the field associated with the criteria assignment.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>