force-app/main/default/objects/Criteria_Assignment__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>Stores the specific value assigned to the field in the criteria assignment.</description>
    <label>Field Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>