force-app/main/default/objects/Criteria_Assignment__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Indicates the operator used in the criteria assignment for comparison.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Criteria_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equal to</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equal to</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>