force-app/main/default/objects/Criteria_Assignment__c/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <description>Represents the serial number or order of the criteria assignment in a sequence.</description>
    <label>S No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>